Reduce image size by using custom JRE